# mailer-server

./: .dockerignore  .env  .env.example  .gitignore  .name_lock  Cargo.toml  Dockerfile  LICENSE  README.md  app-refresh-setup.sh  app-setup.sh  diesel.toml  docker-compose.yml  docker-tag-and-push.sh  full.docker-compose.yml
.cargo/: config.toml
.github/workflows/: test.yml
apps/executor/: .env.example  Cargo.toml  Dockerfile  README.md
apps/executor/src/: background_service.rs  main.rs  queue_handler.rs  redis_error_handler.rs  schema.rs  thread_namer.rs
apps/executor/src/http/: mod.rs  system_controller.rs
apps/user/: .env.example  Cargo.toml  Dockerfile
apps/user/src/: main.rs
apps/user/src/http/controllers/: announcement_controller.rs  application_controller.rs  auth_controller.rs  main_controller_guest.rs  misc_controller.rs  mod.rs  notification_controller.rs  permission_controller.rs  profile_controller.rs  role_controller.rs  system_controller.rs  ui_menu_controller.rs  ui_menu_item_controller.rs  user_controller.rs
core/: Cargo.toml
core/src/: app_context.rs  app_setup.rs  app_state.rs  auth.rs  entities.rs  lib.rs  permissions.rs  roles.rs  schema.rs  user_setup.rs  uuid.rs
core/src/enums/: app_message.rs  auth_role.rs  days.rs  mod.rs  permissions.rs  roles.rs
core/src/helpers/: auth.rs  db.rs  db_pagination.rs  form.rs  http.rs  mod.rs  number.rs  request.rs  responder.rs  security.rs  string.rs  time.rs
core/src/http/: kernel.rs  mod.rs
core/src/http/controllers/: application_controller.rs  auth_controller.rs  main_controller_guest.rs  misc_controller.rs  mod.rs  profile_controller.rs  setting_controller.rs  system_controller.rs
core/src/http/middlewares/: auth_middleware.rs  manual_auth_middleware.rs  mod.rs
core/src/models/: app_key.rs  application.rs  auth_attempt.rs  file_upload.rs  mail.rs  mail_address.rs  mod.rs  notification.rs  password_reset.rs  personal_access_token.rs  role.rs  role_permission.rs  ui_menu_item.rs  user.rs  user_permission.rs  user_ui_menu_item.rs
core/src/repositories/: announcement_repository.rs  app_key_repository.rs  application_repository.rs  auth_attempt_repository.rs  file_upload_repository.rs  mail_address_repository.rs  mail_error_repository.rs  mail_repository.rs  mod.rs  notification_repository.rs  password_reset_repository.rs  permission_repository.rs  role_permission_repository.rs  role_repository.rs  ui_menu_item_repository.rs  ui_menu_repository.rs  user_permission_repository.rs  user_repository.rs  user_role_repository.rs  user_ui_menu_item_repository.rs
core/src/results/: app_result.rs  http_result.rs  mod.rs  redis_result.rs
core/src/services/: announcement_service.rs  app_key_service.rs  application_service.rs  auth_attempt_service.rs  auth_service.rs  cache_service.rs  file_upload_service.rs  mail_service.rs  mailer_service.rs  mod.rs  notification_service.rs  password_reset_service.rs  permission_service.rs  personal_access_token_service.rs  redis_service.rs  role_permission_service.rs  role_service.rs  ui_menu_item_service.rs  ui_menu_service.rs  user_permission_service.rs  user_service.rs  user_ui_menu_item_service.rs
cosmic/: Cargo.toml
cosmic/src/: app_context.rs  app_setup.rs  app_state.rs  lib.rs  redis.rs  schema.rs
cosmic/src/enums/: app_message.rs  auth_permission.rs  auth_role.rs  department_codes.rs  entities.rs  mod.rs
cosmic/src/helpers/: auth.rs  http.rs  id_generator.rs  mod.rs  once_lock.rs  responder.rs  security.rs  validator.rs
cosmic/src/http/: kernel.rs  mod.rs
cosmic/src/models/: announcement.rs  app_key.rs  auth_attempt.rs  file_upload.rs  mail_error.rs  mod.rs  notification.rs  password_reset.rs  permission.rs  role.rs  ui_menu.rs  user.rs  user_permission.rs  user_role.rs  user_ui_menu_item.rs
cosmic/src/repositories/: announcement_repository.rs  app_key_repository.rs  application_repository.rs  auth_attempt_repository.rs  mail_address_repository.rs  mail_error_repository.rs  mail_repository.rs  mod.rs  notification_repository.rs  password_reset_repository.rs  personal_access_token_repository.rs  role_permission_repository.rs  user_permission_repository.rs
cosmic/src/results/: app_result.rs  http_result.rs  mod.rs
cosmic/src/services/: app_key_service.rs  application_service.rs  auth_attempt_service.rs  auth_service.rs  cache_service.rs  file_upload_service.rs  mail_address_service.rs  mail_error_service.rs  mail_service.rs  mailer_service.rs  mod.rs  password_reset_service.rs  permission_service.rs  redis_next_service.rs  redis_service.rs  role_permission_service.rs  role_service.rs  ui_menu_item_service.rs  user_permission_service.rs  user_service.rs
examples/basic/: .env  .env.executor  README.md  docker-compose.yml
migrations/2023-07-08-173706_create_mails_table/: up.sql
resources/migrations/2023-05-09-224043_diesel_misc_setup/: down.sql  up.sql
resources/migrations/2023-05-09-224044_create_users_table/: up.sql
resources/migrations/2023-06-14-100658_create_auth_attempts_table/: down.sql  up.sql
resources/migrations/2023-06-21-205904_create_roles_table/: up.sql
resources/migrations/2023-06-21-205937_create_permissions_table/: up.sql
resources/migrations/2023-06-21-210532_create_role_permissions_table/: down.sql  up.sql
resources/migrations/2023-06-21-210558_create_user_roles_table/: up.sql
resources/migrations/2023-06-21-210604_create_user_permissions_table/: down.sql  up.sql
resources/migrations/2023-06-28-170200_create_ui_menus_table/: down.sql  up.sql
resources/migrations/2023-06-28-170208_create_ui_menu_items_table/: down.sql  up.sql
resources/raw/: categories.json  tags.json
resources/templates/: account-confirmation.tera.html  email-confirmation.tera.html  message.tera.html  otp.tera.html  password-reset-success.tera.html  password-reset.tera.html
resources/templates/layouts/: app.tera.html
src/: main.rs  models.rs
src/core/: database.rs  http_responder.rs  mail_service.rs  mod.rs
src/http/: kernel.rs  mail_controller.rs  mod.rs
src/mailer/: background_service.rs  mod.rs  thread_namer.rs
(+31 files in other folders)
