[package]
name = "mailer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
r2d2 = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
redis = { version = "0.23.0", default-features = false, features = ["tokio-comp", "connection-manager"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
rev_lines = "0.3.0"

