[workspace]
resolver = "3"
members = [
    "cosmic",
    "apps/user",
    "apps/executor"
]

[workspace.dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-cors = "0.7.1"
tera = "1.20.0"
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
log = "0.4.27"
r2d2 = "0.8.10"
rust-argon2 = "3.0.0"
env_logger = "0.11.8"
serde_json = "1.0.143"
derive_more = "2.0.1"
nanoid = "0.4.0"
strum = "0.27.2"
rand = "0.9.2"
futures = "0.3.31"
actix-multipart = "0.7.2"
strum_macros = "0.27.2"
jsonwebtoken = "9.3.1"
mobc = { version = "0.9.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"] }
lettre = { version = "0.11.18", features = ["tokio1-native-tls"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
redis = { version = "0.32.5", default-features = false, features = ["tokio-comp", "connection-manager"] }
